2006-08-30  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/MainWindow.h, src/MainWindow.cpp, src/GLWidget.h,
	src/GLWidget.cpp: Move molecule storage (for now) to the GL widget
	to allow atom selection.

	* src/Primitives.h: Add marker to indicate that a particular
	object was selected by the user.

	* src/Views.h, src/Views.cpp: Add support for ResidueView, as well
	as whole-molecule rendering.

	* src/engines/ResidueSphereEngine.*: New render engine drawing
	spheres for residues in PDB files. Illustrates whole molecule
	render option.

	* src/GLEngine.h: Add glSelection enum for glPushName() entries to
	deliniate between molecule, atom, bond, residue,
	etc. picking. Render engines are responsible for using these as
	appropriate for a particular user view.

	* src/engines/*: Update for glPushName() for atoms and hilights
	when an atom is selected.

2006-08-29  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/GLWidget.cpp: Initial group selection code.  Needs work
	still.  When you double-click to open a file it registers the
	mouse as having moved.  This generates a selection box.

2006-08-28  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/GLWidget.cpp: Using perspective on 3d views.  There is also
	now code for picking included.  When you click but don't drag it
	returns the selected item.  The naming system needs work.

2006-08-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/GLWidget.cpp: Make sure to enable vertex arrays (for
	Benoit's sphere/cylinder classes.

	* src/engines/vertextarray.cpp, src/engines/vertexarray.h: Moved
	Benoit's vertex array sphere and cylinder from Kalzium.

	* src/engines/WireframeEngine.*: New class for a wireframe
	view.

	* src/engines/SphereEngine.*: New class for van der Waals spheres
	using Benoit's classes. Very fast.

	* src/engines/BSEngine.*, src/engines/StickEngine.*: Switch to
	Benoit's vertex array classes.

	* src/MainWindow.h, src/MainWindow.cpp: Add full screen rendering