@@ -43,7 +43,7 @@ bool StickEngine::render(Atom *a)
   rgb = etab.GetRGB(a->GetAtomicNum());
   glColor3d(rgb[0], rgb[1], rgb[2]);
 
-  glPushName(atomTypeName);
+  glPushName(atomType);
   glPushName(a->GetIdx());
   m_sphere.draw(a->GetVector(), 0.3);
 
@@ -85,7 +85,7 @@ bool StickEngine::render(Bond *b)
 
   // hard to separate atoms from bonds in this view
   // so we let the user always select atoms
-  glPushName( atomTypeName );
+  glPushName( atomType);
   glPushName( atom1->GetIdx() );
   rgb = etab.GetRGB(atom1->GetAtomicNum());
   glColor3d(rgb[0], rgb[1], rgb[2]);
